devops/terraform/main.tf
provider "aws" {
  region = var.region
}

resource "aws_instance" "django-ansible" {
  ami           = var.ami
  instance_type = "t2.micro"
  key_name      = var.key_name

#  vpc_security_group_ids = [aws_security_group.django-ansible.id]  # uncomment for attach security group which created by terraform.
  
}
# Note: creating security group with terraform is not recommended.
# uncomment below terraform resource block to create security group via terraform.
/**
resource "aws_security_group" "django-ansible" {
  name        = "django-ansible-sg"
  description = "Security group for Django Ansible EC2 instance"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
**/



output "instance_id" {
  value = aws_instance.django-ansible.id
}

output "public_ip" {
  value = aws_instance.django-ansible.public_ip
}
